health_adminimal/customisations.css
/* Layout checkboxes in 3 columns for long lists */
#edit-field-age-group-und.form-checkboxes,
#edit-field-language-und.form-checkboxes,
#edit-field-life-stage-und.form-checkboxes,
#edit-field-health-topic-und.form-checkboxes,
#edit-field-state-und.form-checkboxes,
#edit-field-condition-or-disease-und.form-checkboxes,
#edit-field-event-organiser-und.form-checkboxes {
    column-count: 3;
    -webkit-column-count: 3;
    -moz-column-count: 3;
}

/* Fix calendar popup appearing outside its container. */
body.adminimal-skin-material table.ui-datepicker-calendar tbody td a {
    padding: .5em .6em;
}
/* Calendar popup days easier to read */
body.adminimal-skin-material table.ui-datepicker-calendar thead th {
    color: black;
}

/* Making all button text white instead of grey, in line with other buttons */
a.button.browse:link, a.button.browse:visited, a.button.browse:hover, a.button.browse:active,
a.button.edit:link, a.button.edit:visited, a.button.edit:hover, a.button.edit:active {
    color: white;
    margin-right: 1em;
    padding: 5px 18px;
    margin-top: -2px;
}

/* Fixing padding issues on fields with Media browser button. */
.media-widget .preview {
    margin-right: 0px;
}
.media-widget input.remove {
    margin-left: 10px;
    margin-right: 1em;
}

/* Fixing padding on media browser tabs */
#media-browser-tabset ul.tabs.primary li.ui-state-default a:link {
    padding: 14px 20px;
}
#media-browser-tabset ul.tabs.primary li.ui-state-default {
    padding-bottom: 0px;
}

/* Fix overlay inconsistencies */
.ui-widget-overlay, .cke_dialog_background_cover {
    background: #aaaaaa;
    background-color: #000000 !important;
}

/* Make ckeditor dialog buttons consistent */
.cke_dialog_footer_buttons a.cke_dialog_ui_button.cke_dialog_ui_button_ok span {
    color: white;
}
.cke_dialog_footer_buttons a.cke_dialog_ui_button:not(.cke_dialog_ui_button_ok) {
    background-color: #aaaaaa;
}
.cke_dialog_footer_buttons a.cke_dialog_ui_button:not(.cke_dialog_ui_button_ok) span{
    color: white;
}

